--- a/matte/trunk/build.xml
+++ b/matte/trunk/build.xml
@@ -146,6 +146,7 @@
 		<pathelement location="${dir.compile.dest.applet}"/>
 		<fileset dir="${dir.lib}">
 			<include name="swing-layout*.jar"/>
+			<include name="jakarta-commons/commons-httpclient-3.1.jar"/>
 		</fileset>
 	</path>
 	
@@ -1247,6 +1248,12 @@
 		<delete dir="${dir.build}/tmp" failonerror="no"/>
 		<mkdir dir="${dir.build}/tmp"/>
 		<unjar src="${dir.lib}/swing-layout-1.0.3.jar" 
+			dest="${dir.build}/tmp"/>
+		<unjar src="${dir.lib}/jakarta-commons/commons-httpclient-3.1.jar"
+			dest="${dir.build}/tmp"/>
+		<unjar src="${dir.lib}/jakarta-commons/commons-logging.jar"
+			dest="${dir.build}/tmp"/>
+		<unjar src="${dir.web.lib}/commons-codec-1.3.jar"
 			dest="${dir.build}/tmp"/>
 		
 		<jar destfile="${dir.dist}/${app.name}-upload-applet.jar">
