--- a/src-applet/magoffin/matt/ma2/web/applet/UploadApplet.properties
+++ b/src-applet/magoffin/matt/ma2/web/applet/UploadApplet.properties
@@ -8,5 +8,15 @@ label.collection=Collection
 label.pane.files=Files
 label.pane.options=Options
 
+upload.progress.title=Uploading files to Matte
+upload.progress.reading.file=Uploading {0}
+
 alert.title.warning=Warning
 alert.zip.selection.msg=When uploading a zip archive, only a single zip archive (and no other files) may be selected.
+alert.no.selection.msg=Please select one more files to upload.
+alert.upload.complete=The files have been uploaded to Matte. You can return to the Home page to monitor Matte's progress in processing your files.
+
+alert.title.error=Error
+alert.error.initdata=An error occurred while gathering data from Matte: {0}
+alert.error.upload.unexpected.status=Got an unexpected result code from Matte: {0}
+alert.error.upload.ioexception=Error communicating with Matte: {0}
