--- a/matte/trunk/environment/demo/env.properties
+++ b/matte/trunk/environment/demo/env.properties
@@ -332,6 +332,17 @@ feature.registration=true
 
 
 ###############################################################################
+# feature.upload.applet <boolean>
+# 
+# Set to "true" to enable the Matte Add Files applet on the "Add" page. This
+# allows users to upload entire folders of files without needing to zip them
+# up manually. Requires deploying the signed applet JAR into the "applet"
+# directory of the webapp.
+
+feature.upload.applet=false
+
+
+###############################################################################
 # ignore.mail.exceptions <boolean>
 # 
 # Set to "true" to ignore any exception thrown while trying to send an email.
