--- a/matte/branches/spring2/.classpath
+++ b/matte/branches/spring2/.classpath
@@ -10,7 +10,6 @@
 	<classpathentry kind="lib" path="lib/j2ee/mail.jar"/>
 	<classpathentry kind="lib" path="lib/j2ee/jdbc2_0-stdext.jar"/>
 	<classpathentry kind="lib" path="lib/j2ee/jta.jar"/>
-	<classpathentry kind="lib" path="lib/spring/spring-mock-1.2.8.jar" sourcepath="lib/spring/spring-1.2.8-src.jar"/>
 	<classpathentry kind="lib" path="environment/local/jmagick.jar"/>
 	<classpathentry kind="lib" path="lib/jdbc/postgresql-8.1-408.jdbc3.jar"/>
 	<classpathentry kind="lib" path="lib/jmf/jmf-2.1.1e.jar"/>
@@ -18,5 +17,6 @@
 	<classpathentry kind="lib" path="lib/swing-layout-1.0.3.jar"/>
 	<classpathentry kind="lib" path="lib/jakarta-commons/commons-httpclient-3.1.jar" sourcepath="lib/jakarta-commons/commons-httpclient-3.1-src.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Matte Server"/>
+	<classpathentry kind="lib" path="lib/spring/spring-test.jar" sourcepath="lib/spring/spring-test-sources.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
