--- a/.classpath
+++ b/.classpath
@@ -15,8 +15,8 @@
 	<classpathentry kind="lib" path="lib/jmf/jmf-2.1.1e.jar"/>
 	<classpathentry kind="lib" path="lib/swing-layout-1.0.3.jar"/>
 	<classpathentry kind="lib" path="lib/jakarta-commons/commons-httpclient-3.1.jar" sourcepath="lib/jakarta-commons/commons-httpclient-3.1-src.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Matte Server"/>
 	<classpathentry kind="lib" path="lib/spring/spring-test.jar" sourcepath="lib/spring/spring-test-sources.jar"/>
 	<classpathentry kind="lib" path="lib/junit/junit-4.4.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
